# pomodoro_analystic

./: .gitignore  README.md  alembic.ini  dependecy.py  dev.env  docker-compose.yml  github  github.pub  pomodoro.sqlite  pyproject.toml
alembic/: env.py
alembic/versions/: 1848930ee6da_asd.py  35b72fddf49f_init.py  6ae28dc64532_initial_migration.py  789d02f73316_init.py  7cb9a7572c4b_access_token_nullable.py  a62cc2647cd6_user_id_instasks.py  b6431f73da84_add_email_column_to_userprofile.py
app/: .dev.env  .local.env  .prod.env  database.py  dependency.py  exceptions.py  fixtures.py  main.py  settings.py
app/database/: __init__.py  accessor.py  database.py  models.py
app/handlers/: __init__.py  auth.py  dependecy.py  ping.py  tasks.py  user.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  task.py  user.py
app/service/: __init__.py  auth.py  task.py  user.py
cache/: __init__.py  accessor.py
client/: google_client.py  yandex_client.py
